# chibiwasm

./: .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  _typos.toml  main_test.ts  runtime.ts  test.wasm  test.wat
.github/actions/cache_cargo/: action.yml
.github/actions/docker/: Dockerfile  action.yml
.github/workflows/: main.yml  rust_ci.yml
examples/: args_get.rs  args_get.wasm  fd_read.rs  fd_read.wasm  fd_write.rs  fd_write.wasm  fd_write.wat  fib.rs  fib.wasm  fib.wat  hello.rs  hello.wasm  llama-chat.wasm  llama.rs  risp.rs  risp.wasm  rjo.rs  rjo.wasm
src/: error.rs  float.rs  instruction.rs  integer.rs  lib.rs  main.rs  module.rs  runtime.rs  section.rs  value.rs
src/binary/: error.rs  instruction.rs  mod.rs  module.rs  section.rs  types.rs
src/binary/snapshots/: chibiwasm__binary__module__test__decode_module.snap  chibiwasm__binary__module__test__nested_if.snap  chibiwasm__binary__module__test__return.snap
src/execution/: address.rs  error.rs  float.rs  import.rs  importer.rs  indices.rs  instance.rs  integer.rs  macros.rs  mod.rs  module.rs  op.rs  runtime.rs  store.rs  value.rs
src/execution/fixtures/: invoke.wat
src/runtime/: error.rs  mod.rs  op.rs  runtime.rs  value.rs
src/wasi/: macros.rs  mod.rs
src/wasi/wasi_ephemeral_nn/: mod.rs
src/wasi/wasi_snapshot_preview1/: file.rs  file_table.rs  mod.rs  preview1.rs  process.rs  types.rs  virtual_file.rs  wasi_file.rs
tests/: spec.rs
tests/testsuite/: conversions.wast  float_exprs.wast  float_misc.wast
