[package]
name = "chibiwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
wasmer = "3.1.1"
leb128 = "0.2.5"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.39"
wabt = { git = "https://github.com/skanehira/wabt-rs" }
pretty_assertions = "1.3.0"
insta = "1.29.0"
